# ChangeLog for dev-ruby/htmlentities
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/htmlentities/ChangeLog,v 1.25 2011/04/10 06:34:24 graaff Exp $

*htmlentities-4.3.0 (10 Apr 2011)

  10 Apr 2011; Hans de Graaff <graaff@gentoo.org>
  +htmlentities-4.3.0.ebuild:
  Version bump.

  10 Apr 2011; Hans de Graaff <graaff@gentoo.org>
  -htmlentities-4.2.2-r1.ebuild, -htmlentities-4.2.3.ebuild:
  Remove old versions.

*htmlentities-4.2.4 (31 Jan 2011)

  31 Jan 2011; Hans de Graaff <graaff@gentoo.org>
  +htmlentities-4.2.4.ebuild:
  Version bump.

*htmlentities-4.2.3 (08 Jan 2011)

  08 Jan 2011; Hans de Graaff <graaff@gentoo.org>
  +htmlentities-4.2.3.ebuild:
  Version bump.

  03 Jan 2011; Hans de Graaff <graaff@gentoo.org>
  -htmlentities-4.0.0.ebuild:
  Remove old version.

  02 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  htmlentities-4.2.2.ebuild:
  x86 stable wrt bug #349890

  01 Jan 2011; Markos Chandras <hwoarang@gentoo.org> htmlentities-4.2.2.ebuild:
  Stable on amd64 wrt bug #349890

*htmlentities-4.2.2-r1 (27 Dec 2010)

  27 Dec 2010; Hans de Graaff <graaff@gentoo.org> htmlentities-4.2.2.ebuild,
  +htmlentities-4.2.2-r1.ebuild:
  Bump revision to drop ruby19 from stable candidate.

  21 Dec 2010; Hans de Graaff <graaff@gentoo.org> htmlentities-4.2.2.ebuild:
  Keyword ~x86-macos.

  21 Dec 2010; Hans de Graaff <graaff@gentoo.org>
  -htmlentities-4.2.1.ebuild:
  Remove old version.

*htmlentities-4.2.2 (07 Nov 2010)

  07 Nov 2010; Hans de Graaff <graaff@gentoo.org>
  +htmlentities-4.2.2.ebuild:
  Version bump.

  26 Jul 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  htmlentities-4.2.1.ebuild:
  Fix tests with Ruby 1.9.2.

  25 Jun 2010; Hans de Graaff <graaff@gentoo.org>
  -htmlentities-4.2.0-r2.ebuild:
  Remove old version.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  htmlentities-4.0.0.ebuild, htmlentities-4.2.0-r2.ebuild,
  htmlentities-4.2.1.ebuild:
  Various cleanups.