@@ -4,15 +4,17 @@ Hash: SHA256
 DIST htmlentities-4.2.2.gem 31232 RMD160 8cd2460ecf15a6821459807778015515ef812f7f SHA1 1d9c37cd6d0914f73899fda713e602828b7c9f1b SHA256 f160a3406ebe538f99ed91a7a501c769dc3f79b74b999f91f41dd2b1db289653
 DIST htmlentities-4.2.4.gem 33280 RMD160 e1d91a678d327563d7fa3c0cdc11a46e05377806 SHA1 c80f7f25fe79bc58d44ce465745c0447e1e9e2bd SHA256 d025e7f19768ca37aebac237c2c86300a0c38e6a56df0f7b3073abc4fa577837
 DIST htmlentities-4.3.0.gem 31744 RMD160 e6f0c229207230eb3daa5d21a77d7598e8885e96 SHA1 4730c04c245e8b7a1f8a38ed7e5cce27cbc9e7e3 SHA256 3f99bd7a5d0de5d323ee43f71b2b775d029bdbf24dc747a2c8717460a6fc4615
+DIST htmlentities-4.3.1.gem 33280 RMD160 84fd5893689cc7aa28e96d4ee0828f6dc213ef9b SHA1 b28cb8cb87ff538c05aad2853c7d700ed389f853 SHA256 d199741b653ea3e84a55e07f4d8190806465e693b04031c63c2a215b382e0397
 EBUILD htmlentities-4.2.2.ebuild 721 RMD160 11ca9314f19a3f05f434a595c16a72cabe69f869 SHA1 f037d95c4e9fd4ff299a326fa3cc1270f32d82c0 SHA256 4720b264fc62a0279c265c8cbcd3d5abdb8f0b96ec0218da0c78298c8fd4dcdb
 EBUILD htmlentities-4.2.4.ebuild 726 RMD160 e1d5114db90131c982b4921319247c2bd8d5737c SHA1 9fce1a4a4c13a1b3253734d303ee647296f47c8a SHA256 fdf7244fb5a0cce1be39b1cfa37a510ca5f9d78f290ba920e4c71236bab0517c
 EBUILD htmlentities-4.3.0.ebuild 722 RMD160 0e82a5fda1b63d358af4f5435060f4e3f1b75324 SHA1 f068646e4a164f18f0642a19d7ba4bdc75e819cd SHA256 ce938f4b099c669217cc911e63af37aac3e32c55d42735e6c72d806c3c314455
-MISC ChangeLog 3754 RMD160 a29bc1c4db440a8cd63f4f20a3564fc7ef01040a SHA1 4918d14696fc1e04458abf142c10249019f38920 SHA256 05e5132f46c70a9b90a20faf68bf44d3e987fe9cf097625237dc72729b66a298
+EBUILD htmlentities-4.3.1.ebuild 722 RMD160 d53350ff2537ba4a34e6a5600e5e57d902a1a92b SHA1 8be8fc013d63b445c0d5e2e498f7f79c021a0bab SHA256 819ad4911553367dad9d7179e0bd4a09e3bb39f5f4a8375c390ecb7faccd7e93
+MISC ChangeLog 3884 RMD160 4873d9d2db33f5728387cb3489a04c8ab3edaa8c SHA1 ea152590e8a7727076e17d5054ef441a502d72f7 SHA256 3f145fc831b801fc66b43c080ff2b5b68a08df62ca9d02ad540464a907a8e4b8
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2hT3YACgkQrnu0mw69Jkrx1wD7BVSz/2R5eXMyvJGSD6K8ACZy
-t3petLYBt3fz5C7De74BAJJ7C2NnBHNkMxs5BjS3g46fhq9zCmIKN8cZ053plEwN
-=Oskb
+iF4EAREIAAYFAk7XKLEACgkQiIP6VqMIqNe/+gD/Q2lywcvGVtxOQBRgq1bN5QQ+
+FwIi+lTXPWrII+px7u4A/jvpIDfHbAGtalc1YwlrW7488syZY/p0FUbksCvKF1lA
+=LXju
 -----END PGP SIGNATURE-----
